# djutils

./: .ruff.toml  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pytests.yaml
djutils/: admin.py  apps.py  middleware.py
djutils/fields/: bank.py
djutils/forms/: __init__.py  bank.py
djutils/migrations/: 0001_initial.py
djutils/models/: __init__.py  datable.py  editable.py  images.py  natural.py  searchable.py  token.py  trackable.py
djutils/serializers/: __init__.py  eager.py  media.py  natural.py  period.py
djutils/templates/admin/: trackable_change_form.html
djutils/utils/: __init__.py  shortcuts.py  weighted.py
djutils/validators/: __init__.py  schema.py
